# headcrab

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  conventional-commit.yaml  docker-compose.yaml  k8s.yaml  k8s.yml
.cargo/: config.toml
.github/actions/build-publish-image/: action.yaml
.github/actions/deploy-k8s/: action.yaml
.github/actions/deploy-service/: action.yaml
.github/actions/publish-image/: action.yaml
.github/actions/setup-rust/: action.yaml
.github/actions/test-infra/: action.yaml
.github/actions/test-k8s/: action.yaml
.github/actions/test-solution/: action.yaml
.github/workflows/: check-pr-title.yaml  deploy.yml  main.yaml  main.yml  on-pull-request.yml  on-push-main.yml
config/: base.yaml  dev.yaml  prod.yaml  test.yaml
src/: actor.rs  config.rs  domain.rs  error.rs  game.rs  lib.rs  lobby.rs  main.rs  metrics.rs  player.rs  routes.rs  startup.rs  websocket.rs
src/actor/: game.rs  game_factory.rs  message.rs  player.rs
src/actor/game/: client.rs
src/actor/game_factory/: client.rs
src/actor/message/: game.rs  game_factory.rs
src/controller/: game.rs  lobby.rs  router.rs  routes.rs
src/domain/: error.rs  game.rs  game_factory.rs  game_fsm.rs  game_manager.rs  message.rs  mod.rs  player.rs  round.rs
src/domain/game/: actor.rs  game.rs  message.rs
src/domain/game_factory/: actor.rs  game_factory.rs  message.rs
src/domain/player/: actor.rs
src/error/: domain_error.rs  domain_error_type.rs  external_error.rs  mod.rs
src/game/: actor.rs  actor_client.rs  game_fsm.rs  game_word.rs  mod.rs  nickname.rs
src/game_factory/: actor.rs  actor_client.rs  mod.rs
src/metrics/: mod.rs
src/player/: actor.rs  mod.rs
src/round/: mod.rs
src/routes/: game.rs  health.rs  metrics.rs  mod.rs
src/websocket/: message.rs  mod.rs
tests/: health_check.rs
tests/api/: game.rs  health.rs  helpers.rs  main.rs
tests/api/helpers/: mod.rs  test_app.rs  test_game.rs  test_player.rs
words/: en.json  en.txt
