[package]
name = "headcrab"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "headcrab"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
hyper = "0.14.27"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
log = "0.4.20"
std-logger = "0.5.2"
rust-fsm = "0.6.1"
serde-aux = "4.2.0"
thiserror = "1.0.50"
prometheus = "0.13.3"
lazy_static = "1.4.0"

[dev-dependencies]
futures-util = "0.3.28"
reqwest = { version = "0.11.22", features = ["json"] }
tokio-tungstenite = "0.20.1"
