[package]
name = "headcrab"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "headcrab"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
config = { version = "0.13.4", default-features = false, features = ["yaml"] }
hyper = "0.14.27"
lazy_static = "1.4.0"
log = "0.4.20"
prometheus = "0.13.3"
rand = "0.8.5"
rust-fsm = "0.6.1"
serde = { version = "1.0.193", features = ["derive"] }
serde-aux = "4.3.1"
serde_json = "1.0.108"
std-logger = "0.5.2"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }

[dev-dependencies]
futures-util = "0.3.29"
reqwest = { version = "0.11.22", features = ["json"] }
tokio-tungstenite = "0.20.1"
