[package]
name = "headcrab"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "headcrab"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
hyper = "1.2.0"
lazy_static = "1.4.0"
log = "0.4.21"
prometheus = "0.13.3"
rand = "0.8.5"
rust-fsm = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.115"
std-logger = "0.5.3"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.12.2", features = ["json"] }
tokio-tungstenite = "0.21.0"
